--- a/src/html/user-profile.html
+++ b/src/html/user-profile.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card-body py-0">
+            <div class="card-body pt-0">
                 <div class="user-about-block m-0">
                     <div class="row">
                         <div class="col-md-4 text-center mt-n5">
