package upgrade and bug fix

--- a/bootstrap/src/html/elements/icon-feather.html
+++ b/bootstrap/src/html/elements/icon-feather.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <!-- [Head] start -->
   <head>
@@ -26,7 +26,7 @@
               <div class="card-body text-center">
                 <div class="row justify-content-center">
                   <div class="col-sm-6">
-                    <input type="text" id="icon-search" class="form-control mb-4" placeholder="search . . " >
+                    <input type="text" id="icon-search" class="form-control mb-4" placeholder="search . . " />
                   </div>
                 </div>
                 <div class="i-main" id="icon-wrapper"></div>
@@ -39,7 +39,7 @@
       </div>
     </div>
     <!-- [ Main Content ] end -->
-    @@include('../layouts/footer-block.html') @@include('../layouts/footer-js.html') 
+    @@include('../layouts/footer-block.html') @@include('../layouts/footer-js.html')
 
     <!-- [Page Specific JS] start -->
     <script src="../assets/js/plugins/clipboard.min.js"></script>
