--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -1,33 +1,29 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Dashboard | Gradient Able free Angular 16+ Template</title>
-
+    <title>Gradient Able Free Angular Dashboard Template</title>
     <!-- HTML5 Shim and Respond.js IE11 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 11]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
     <base href="/" />
-
     <!-- Meta -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimal-ui" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1, minimal-ui" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
-      content="Gradient able angular 16+ admin template made using bootstrap 5 and it has huge amount of ready made feature, UI components, pages which completely fulfills any dashboard needs."
+      title="Gradient Able Angular Admin Template"
+      content="Gradient Able Angular 20 built with Bootstrap 5, and ng-bootstrap 18 dashboard template, which comes with a wide range of pre-built pages."
     />
     <meta
       name="keywords"
-      content="Admin templates, Bootstrap Admin templates, angular 16+, bootstrap 5, Dashboard, Dashboard Templates, sass admin templates, html admin templates, Responsive, Bootstrap Admin templates free download, Angular6 Admin templates free download,premium Bootstrap Admin templates,premium Angular6 Admin templates download"
+      content="Admin templates, Bootstrap Admin templates, angular 20+, bootstrap 5.x.x, Dashboard, Dashboard Templates, sass admin templates, html admin templates, Responsive, Bootstrap Admin templates free download, Angular20 Admin templates free download,premium Bootstrap Admin templates,premium Angular20 Admin templates download"
     />
-    <meta name="author" content="Codedthemes" />
-
+    <meta name="author" content="CodedThemes" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-
     <!-- font style -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" />
   </head>
