--- a/react/index.html
+++ b/react/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <title>Welcome - Gradient Able React with Hooks</title>
+    <!--  Buy Now Link  -->
+    <script defer src="https://fomo.codedthemes.com/pixel/yRevReYmxkh1j4z7Hc4tgbOKeXSu5Bm1"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
